<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#C88383"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="755dp"
        android:layout_height="1082dp"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grass_dew_plant_sunlight_texture_leaf_1408694_pxhere_com" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/button8Text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button2Text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="222dp"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/buttonPlusText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
        app:layout_constraintTop_toBottomOf="@+id/button0"
        tools:ignore="MissingConstraints"
        android:backgroundTint="#FF69B4"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button0Text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonPoint"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:ignore="MissingConstraints"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/buttonPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/buttonPointText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        tools:ignore="MissingConstraints"
        android:backgroundTint="#FF6347"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button9Text"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="257dp"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/buttonEqualText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@+id/buttonPlus"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus"
        tools:ignore="MissingConstraints"
        android:backgroundTint="#FF69B4"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button4Text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="MissingConstraints"
        android:backgroundTint="@color/purple_200" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button5Text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="MissingConstraints"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3Text"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="222dp"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDivideText"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="257dp"
        android:backgroundTint="#FF69B4"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6Text"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="257dp"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button7Text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:ignore="MissingConstraints"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/buttonMinusText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintTop_toBottomOf="@+id/buttonPoint"
        tools:ignore="MissingConstraints"
        android:backgroundTint="#FF69B4"/>

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonMultiplyText"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="257dp"
        android:backgroundTint="#FF69B4"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button1Text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="222dp"
        android:backgroundTint="@color/purple_200"/>

</androidx.constraintlayout.widget.ConstraintLayout>